...
              </android.support.design.widget.CollapsingToolbarLayout>
       </android.support.design.widget.AppBarLayout>

       <include layout="@layout/content_detail_neighbour" />

       <android.support.design.widget.FloatingActionButton
           android:id="@+id/detail_addFavoriteButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
           android:clickable="true"
           android:focusable="true"
           android:backgroundTint="?android:colorBackground"
...
